docs-archive/apache-airflow-providers-google/14.0.0/_sources/_api/airflow/providers/google/cloud/transfers/mysql_to_gcs/index.rst.txt
airflow.providers.google.cloud.transfers.mysql_to_gcs
=====================================================

.. py:module:: airflow.providers.google.cloud.transfers.mysql_to_gcs

.. autoapi-nested-parse::

   MySQL to GCS operator.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.transfers.mysql_to_gcs.MySQLToGCSOperator


Module Contents
---------------

.. py:class:: MySQLToGCSOperator(*, mysql_conn_id='mysql_default', ensure_utc=False, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.transfers.sql_to_gcs.BaseSQLToGCSOperator`


   Copy data from MySQL to Google Cloud Storage in JSON, CSV or Parquet format.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:MySQLToGCSOperator`

   :param mysql_conn_id: Reference to :ref:`mysql connection id <howto/connection:mysql>`.
   :param ensure_utc: Ensure TIMESTAMP columns exported as UTC. If set to
       `False`, TIMESTAMP columns will be exported using the MySQL server's
       default timezone.


   .. py:attribute:: ui_color
      :value: '#a0e08c'



   .. py:attribute:: type_map


   .. py:attribute:: mysql_conn_id
      :value: 'mysql_default'



   .. py:attribute:: ensure_utc
      :value: False



   .. py:property:: db_hook
      :type: airflow.providers.mysql.hooks.mysql.MySqlHook



   .. py:method:: query()

      Query mysql and returns a cursor to the results.



   .. py:method:: field_to_bigquery(field)

      Convert a DBAPI field to BigQuery schema format.



   .. py:method:: convert_type(value, schema_type, **kwargs)

      Take a value from MySQLdb and convert it to a value safe for JSON/Google Cloud Storage/BigQuery.

      * Datetimes are converted to `str(value)` (`datetime.isoformat(' ')`)
        strings.
      * Times are converted to `str((datetime.min + value).time())` strings.
      * Decimals are converted to floats.
      * Dates are converted to ISO formatted strings if given schema_type is
        DATE, or `datetime.isoformat(' ')` strings otherwise.
      * Binary type fields are converted to integer if given schema_type is
        INTEGER, or encoded with base64 otherwise. Imported BYTES data must
        be base64-encoded according to BigQuery documentation:
        https://cloud.google.com/bigquery/data-types

      :param value: MySQLdb column value
      :param schema_type: BigQuery data type



   .. py:method:: get_openlineage_facets_on_start()


